Adicionando barra de loading.

--- a/pokedexApp/templates/base.html
+++ b/pokedexApp/templates/base.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="pokemon, api, pokedex, pokeapi">
     <meta name="author" content="Lucas de Almeida Sarmento">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'css/pace-theme-minimal.css' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% block style %}{% endblock %}
     <link rel="shortcut icon" href="{% static 'img/pokeball.ico' %}">
@@ -107,6 +108,6 @@
    
   </div>
 
-
+  <script src="{% static 'js/pace.min.js' %}"></script>
 </body>
 </html>
