--- a/pokedexApp/templates/pokedexApp/pokemon.html
+++ b/pokedexApp/templates/pokedexApp/pokemon.html
@@ -150,7 +150,7 @@
     </div>
 
     
-    <a class="btn btn-return" href="/">Back to homepage</a>
+    <button class="btn btn-return" onclick="to_top()"><i class="fas fa-arrow-circle-up"></i> </button>
     
 
               
