--- a/pokedexApp/templates/base.html
+++ b/pokedexApp/templates/base.html
@@ -53,18 +53,15 @@
       </div>
     </form>
 
-    {% block container %}
-
-      <div class="loader-container inativo" data-js="loader">
-        <i class="fas fa-spinner"></i>
-      </div>
+    {% block container %}     
 
       <ul class="pokemons-grid">
         {% if pokemons %}
 
           {% if pokemonsList.paginator.count <= 2 %}
             {% for pokemon in pokemons %}
-            <a href="{% url 'pg_pokemon' %}?pokemonID={{pokemon.id}}"> 
+            <a href="{% url 'pg_pokemon' %}?pokemonID={{pokemon.id}}"
+               onclick="load_pokemon()"> 
               <li class="card unique {{ pokemon.types.0.type.name }}">        
                 <p class="card-number">N° {{ pokemon.id }}</p>              
                 <img class="card-image" src="{{ pokemon.img }}" alt="{{ pokemon.name }}">
@@ -77,7 +74,8 @@
             {% endfor %}
           {% elif pokemonsList.paginator.count > 2 %}
             {% for pokemon in pokemons %}
-            <a href="{% url 'pg_pokemon' %}?pokemonID={{pokemon.id}}"> 
+            <a href="{% url 'pg_pokemon' %}?pokemonID={{pokemon.id}}"
+               onclick="load_pokemon()"> 
               <li class="card {{ pokemon.types.0.type.name }}">        
                 <p class="card-number">N° {{ pokemon.id }}</p>              
                 <img class="card-image" src="{{ pokemon.img }}" alt="{{ pokemon.name }}">
@@ -92,7 +90,10 @@
           
 
         {% elif not pokemons %}
-          <h1 style="text-align: center; color: white;">Not found</h1>
+          <div class="pokemon-not-found active" data-js="pokemon-not-found"> 
+            <a href="/" onclick="load_page()" class="not-found-close" data-js="not-found-close"> <i class="far fa-times-circle"></i> </a>
+            <p class="not-found-message">Pokemon not found !</p>
+          </div>
         {% endif %}
       </ul>
 
@@ -124,29 +125,61 @@
    
   </div>
 
+  <div class="loader-general"> 
+    <div class="loader-container" data-js="loader">
+      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      width="40px" height="50px" viewBox="0 0 24 30" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+     <rect x="0" y="0" width="4" height="10" fill="#333">
+       <animateTransform attributeType="xml"
+         attributeName="transform" type="translate"
+         values="0 0; 0 20; 0 0"
+         begin="0" dur="1s" repeatCount="indefinite" />
+     </rect>
+     <rect x="10" y="0" width="4" height="10" fill="#333">
+       <animateTransform attributeType="xml"
+         attributeName="transform" type="translate"
+         values="0 0; 0 20; 0 0"
+         begin="0.2s" dur="1s" repeatCount="indefinite" />
+     </rect>
+     <rect x="20" y="0" width="4" height="10" fill="#333">
+       <animateTransform attributeType="xml"
+         attributeName="transform" type="translate"
+         values="0 0; 0 20; 0 0"
+         begin="0.4s" dur="1s" repeatCount="indefinite" />
+     </rect>
+   </svg>
+    </div> 
+  </div>
+
   <script src="{% static 'js/pace.min.js' %}"></script>
   <script>
     const main_container = document.querySelector('.container')
-    const loader = document.querySelector('[data-js="loader"]')
     const btn_search = document.querySelector('[data-js="btnSearchPokemon"]')
     const btn_home = document.querySelector('[data-js="btnHome"]')
+    const loader_general = document.querySelector('.loader-general')
 
     function load_page(){
-      scrollTo(0,0)      
-      // main_container.style.opacity = '0.5'
-      loader.classList.remove('inativo')
+      to_top()        
+      load_pokemon()
     }
 
     function search_input_load(){
       btn_search.classList.add('active')
+      load_pokemon()
     }
 
     function go_to_home(){
       btn_home.classList.add('active')
+      load_pokemon()
     }
 
     function to_top(){
       scrollTo(0,0)
+    }
+
+    function load_pokemon(){
+      main_container.style.opacity = '0.5'
+      loader_general.classList.add('active')
     }
 
   </script>
