Responsividade da home.

--- a/pokedexApp/templates/base.html
+++ b/pokedexApp/templates/base.html
@@ -35,7 +35,7 @@
                 id="form-busca"
                 name="term"
                 value="{{ request.GET.term }}"
-                placeholder="Look for the Pokémon's name, number or something like that."
+                placeholder="Search for a Pokémon.."
                 autocomplete="off"/>
 
         <div class="btnGroup">
@@ -150,6 +150,8 @@
    </svg>
     </div> 
   </div>
+
+
 
   <script src="{% static 'js/pace.min.js' %}"></script>
   <script>
