--- a/static/css/base.css
+++ b/static/css/base.css
@@ -498,6 +498,7 @@ a{
   cursor: pointer;
 }
 
+/* Loader  */
 
 .loader-general{
   display: none;
@@ -517,4 +518,39 @@ svg path,
 svg rect{
   font-size: 4rem;
   fill: #bef5ed;
+}
+
+
+/* Responsive */
+
+@media (max-width:600px){
+  .container {
+    padding: 10px;
+  }
+  .filter-container {
+    width: 100%;
+  }
+  .filter {
+    width: 100%;
+    height: 40px;
+    padding: 12px;
+    font-size: 12px;
+  }
+  .btnGroup{
+    top: 44px;
+    right: 10px;
+  }
+  .btn-search, .btn-all {
+    display: inline-flex;
+    place-items: center;
+    width: 50px;
+    height: 20px;
+    padding: 5px 10px;
+  }
+  .btn-search .search, .btn-all .home,
+  .btn-search .spinner, .btn-all .spinner{
+    font-size: 12px;
+    margin: 0 auto;
+  }
+
 }
