--- a/static/css/base.css
+++ b/static/css/base.css
@@ -527,6 +527,9 @@ svg rect{
   .container {
     padding: 10px;
   }
+  .pokemons-grid {
+    padding: 0 10px;
+  }
   .filter-container {
     width: 100%;
   }
