Adicionando footer e botões de github e blog.

--- a/pokedexApp/templates/base.html
+++ b/pokedexApp/templates/base.html
@@ -125,6 +125,27 @@
    
   </div>
 
+  <footer>
+    <ul class="flex">
+      <li class="list-item-footer">
+        <a class="btn-footer"
+          href="https://www.lucasalmeida.net.br/"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img class="logo" src="{% static 'img/my-logo.png' %}" alt="My blogsite.">
+        </a>
+      </li>
+      <li class="list-item-footer">
+        <a class="btn-footer"
+          href="https://github.com/LucasAlmeidaSar"
+          target="_blank"
+          rel="noopener noreferrer">
+          <i class="fab fa-github"></i>
+        </a>
+      </li>
+    </ul>
+  </footer>
+
   <div class="loader-general"> 
     <div class="loader-container" data-js="loader">
       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
