--- a/static/css/base.css
+++ b/static/css/base.css
@@ -522,11 +522,12 @@ svg rect{
 
 footer{
   width: 100%;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  margin: 10px 0;
+  margin: 30px 0;
   background: black;
 }
 
