--- a/static/css/base.css
+++ b/static/css/base.css
@@ -37,7 +37,7 @@ a{
 }
 
 .container {
-	padding: 40px;
+  padding: 40px 40px 0;
 	margin: 0 auto;
 }
 
@@ -480,7 +480,10 @@ a{
   place-items: center;
 }
 
-.pokemon-not-found.active{  display: grid;  }
+.pokemon-not-found.active{
+    display: grid;  
+    margin: 0 auto 300px;
+}
 
 .not-found-message{
   font-weight: bold;
