--- a/static/css/base.css
+++ b/static/css/base.css
@@ -530,7 +530,7 @@ footer{
   justify-content: center;
   align-items: center;
   padding: 10px;
-  margin: 30px 0;
+  margin: 80px 0 0;
   background: black;
 }
 
