--- a/pokedexApp/templates/pokedexApp/index.html
+++ b/pokedexApp/templates/pokedexApp/index.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block pokemons_found %}
-  <p class="results-found">{{pokemonsList.paginator.count}} pokemons found.</p>
+  <p class="results-found"><b>{{pokemonsList.paginator.count}}</b> pokemons found.</p>
 {% endblock %}
