--- a/pokedexApp/templates/pokedexApp/pokemon_search.html
+++ b/pokedexApp/templates/pokedexApp/pokemon_search.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block pokemons_found %}
-  <p class="results-found">{{pokemonsList.paginator.count}} pokemons found.</p>
+  <p class="results-found"><b>{{pokemonsList.paginator.count}}</b> pokemons found.</p>
 {% endblock %}
 
 {% block pagination %}
