Alterando cores dos botões de tipos e do botão de filtro.

--- a/pokedexApp/templates/base.html
+++ b/pokedexApp/templates/base.html
@@ -61,24 +61,24 @@
     <div class="container_types inactive" data-js="types_container"> 
       <p class="title_types">Select a type:</p> 
       <ul class="types">
-        <a class="bug" href="{% url 'pg_type' %}?id=7" onclick="load_pokemon()">Bug</a>         
-        <a class="dark" href="{% url 'pg_type' %}?id=17" onclick="load_pokemon()">Dark</a>
-        <a class="dragon" href="{% url 'pg_type' %}?id=16" onclick="load_pokemon()">Dragon</a>
-        <a class="electric" href="{% url 'pg_type' %}?id=13" onclick="load_pokemon()">Electric</a>
-        <a class="fairy" href="{% url 'pg_type' %}?id=18" onclick="load_pokemon()">Fairy</a>
-        <a class="fighting" href="{% url 'pg_type' %}?id=2" onclick="load_pokemon()">Fighting</a>
-        <a class="fire" href="{% url 'pg_type' %}?id=10" onclick="load_pokemon()">Fire</a>
-        <a class="flying" href="{% url 'pg_type' %}?id=3" onclick="load_pokemon()">Flying</a>
-        <a class="ghost" href="{% url 'pg_type' %}?id=8" onclick="load_pokemon()">Ghost</a>
-        <a class="grass" href="{% url 'pg_type' %}?id=12" onclick="load_pokemon()">Grass</a>
-        <a class="ground" href="{% url 'pg_type' %}?id=5" onclick="load_pokemon()">Ground</a>
-        <a class="ice" href="{% url 'pg_type' %}?id=15" onclick="load_pokemon()">Ice</a>
-        <a class="normal" href="{% url 'pg_type' %}?id=1" onclick="load_pokemon()">Normal</a>
-        <a class="poison" href="{% url 'pg_type' %}?id=4" onclick="load_pokemon()">Poison</a>
-        <a class="psychic" href="{% url 'pg_type' %}?id=14" onclick="load_pokemon()">Psychic</a>
-        <a class="rock" href="{% url 'pg_type' %}?id=6" onclick="load_pokemon()">Rock</a>
-        <a class="steel" href="{% url 'pg_type' %}?id=9" onclick="load_pokemon()">Steel</a>
-        <a class="water" href="{% url 'pg_type' %}?id=11" onclick="load_pokemon()">Water</a>
+        <a href="{% url 'pg_type' %}?id=7" onclick="load_pokemon()">Bug</a>         
+        <a href="{% url 'pg_type' %}?id=17" onclick="load_pokemon()">Dark</a>
+        <a href="{% url 'pg_type' %}?id=16" onclick="load_pokemon()">Dragon</a>
+        <a href="{% url 'pg_type' %}?id=13" onclick="load_pokemon()">Electric</a>
+        <a href="{% url 'pg_type' %}?id=18" onclick="load_pokemon()">Fairy</a>
+        <a href="{% url 'pg_type' %}?id=2" onclick="load_pokemon()">Fighting</a>
+        <a href="{% url 'pg_type' %}?id=10" onclick="load_pokemon()">Fire</a>
+        <a href="{% url 'pg_type' %}?id=3" onclick="load_pokemon()">Flying</a>
+        <a href="{% url 'pg_type' %}?id=8" onclick="load_pokemon()">Ghost</a>
+        <a href="{% url 'pg_type' %}?id=12" onclick="load_pokemon()">Grass</a>
+        <a href="{% url 'pg_type' %}?id=5" onclick="load_pokemon()">Ground</a>
+        <a href="{% url 'pg_type' %}?id=15" onclick="load_pokemon()">Ice</a>
+        <a href="{% url 'pg_type' %}?id=1" onclick="load_pokemon()">Normal</a>
+        <a href="{% url 'pg_type' %}?id=4" onclick="load_pokemon()">Poison</a>
+        <a href="{% url 'pg_type' %}?id=14" onclick="load_pokemon()">Psychic</a>
+        <a href="{% url 'pg_type' %}?id=6" onclick="load_pokemon()">Rock</a>
+        <a href="{% url 'pg_type' %}?id=9" onclick="load_pokemon()">Steel</a>
+        <a href="{% url 'pg_type' %}?id=11" onclick="load_pokemon()">Water</a>
       </ul>
     </div>
 
