--- a/pokedexApp/templates/pokedexApp/pokemon_search_type.html
+++ b/pokedexApp/templates/pokedexApp/pokemon_search_type.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block pokemons_found %}
-  <p class="results-found">Type: <b>{{type_name|title}}</b> - Results: <b>{{pokemonsList.paginator.count}}</b>.</p>
+  <p class="results-found">Type: <b>{{type_name|title}}</b>  Results: <b>{{pokemonsList.paginator.count}}</b>.</p>
 {% endblock %}
 
 {% block pagination %}
